Nova encomenda implementada (Falta anexo)

--- a/JoiaDaEuropa/app/views/orders/show.html.erb
+++ b/JoiaDaEuropa/app/views/orders/show.html.erb
@@ -20,5 +20,10 @@
   <%= @order.status %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @order.user.email %>
+</p>
+
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
