--- a/JoiaDaEuropa/app/views/orders/_form.html.erb
+++ b/JoiaDaEuropa/app/views/orders/_form.html.erb
@@ -27,8 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :status %>
-    <%= f.text_field :status %>
+    <%= f.hidden_field :user_id%>
   </div>
 
   <div class="actions">
