--- a/JoiaDaEuropa/app/views/orders/index.html.erb
+++ b/JoiaDaEuropa/app/views/orders/index.html.erb
@@ -9,6 +9,7 @@
       <th>Deadline</th>
       <th>Description</th>
       <th>Status</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= order.deadline %></td>
         <td><%= order.description %></td>
         <td><%= order.status %></td>
+        <td><%= order.user.email %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
