--- a/JoiaDaEuropa/app/views/orders/index.html.erb
+++ b/JoiaDaEuropa/app/views/orders/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Orders</h1>
 
+<% if policy(@orders).index? %>
+    <p>Usuario Admin</p>
 <table>
   <thead>
     <tr>
@@ -33,3 +35,36 @@
 <br>
 
 <%= link_to 'New Order', new_order_path %>
+
+<% else %>
+
+    <p>Usuario comum</p>
+    <table>
+      <thead>
+      <tr>
+        <th>Price</th>
+        <th>Deadline</th>
+        <th>Description</th>
+        <th>Status</th>
+        <th>User</th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.price %></td>
+            <td><%= order.deadline %></td>
+            <td><%= order.description %></td>
+            <td><%= order.status %></td>
+            <td><%= order.user.email %></td>
+
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+
+    <br>
+
+<% end %>
