--- a/JoiaDaEuropa/app/views/orders/_form.html.erb
+++ b/JoiaDaEuropa/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(order) do |f| %>
+<%= form_for @order, :html => { multipart: true } do |f| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -10,8 +10,14 @@
       </ul>
     </div>
   <% end %>
+    
+    <div class="field">
+      <%= f.label :attachment%><br>
+      <%= f.file_field :attachment %>
+    </div>
 
-  <div class="field">
+
+    <div class="field">
     <%= f.label :price %>
     <%= f.text_field :price %>
   </div>
@@ -29,6 +35,9 @@
   <div class="field">
     <%= f.hidden_field :user_id%>
   </div>
+
+
+
 
   <div class="actions">
     <%= f.submit %>
