--- a/JoiaDaEuropa/app/views/orders/show.html.erb
+++ b/JoiaDaEuropa/app/views/orders/show.html.erb
@@ -25,5 +25,11 @@
   <%= @order.user.email %>
 </p>
 
+<p>
+  <strong>Pre-visualizacao:</strong><br>
+  <%= image_tag @order.attachment.url(:medium) %><br>
+  <%= @order.attachment.url %>
+</p>
+
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
