--- a/JoiaDaEuropa/app/views/orders/_form.html.erb
+++ b/JoiaDaEuropa/app/views/orders/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
     
     <div class="field">
-      <%= f.label :attachment%><br>
+      <label>Anexo: </label>
       <%= f.file_field :attachment %>
     </div>
 
 
     <div class="field">
-    <%= f.label :price %>
+      <label>Preco: </label>
     <%= f.text_field :price %>
   </div>
 
   <div class="field">
-    <%= f.label :deadline %>
+    <label>Data de Entrega: </label>
     <%= f.date_select :deadline %>
   </div>
 
   <div class="field">
-    <%= f.label :description %>
+    <label>Descricao: </label>
     <%= f.text_area :description %>
   </div>
 
