--- a/JoiaDaEuropa/app/views/orders/new.html.erb
+++ b/JoiaDaEuropa/app/views/orders/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Order</h1>
+<%= link_to 'Nova Encomenda', 'orders/new' %> |
+<%= link_to 'Encomendas Pendentes', '/pending' %>
+
+<h1>Nova Encomenda</h1>
 
 <%= render 'form', order: @order %>
 
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Cancelar', pending_path %>
