Encomendas Concluidas implementado (Cliente/Admin)

--- a/JoiaDaEuropa/app/views/pending/pending.html.erb
+++ b/JoiaDaEuropa/app/views/pending/pending.html.erb
@@ -2,9 +2,9 @@
   <%= link_to 'Nova Encomenda', 'orders/new' %>
 <%end%>
  |
-<%= link_to 'Encomendas Pendentes', 'pending#pending' %>
-|
-<%= link_to 'Encomendas Canceladas', 'canceled#canceled' %>
+<%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
+<%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
+<%= link_to 'Encomendas Concluidas', '/concluded' %>
 
 <p id="notice"><%= notice %></p>
 
