--- a/JoiaDaEuropa/app/views/concluded/concluded.html.erb
+++ b/JoiaDaEuropa/app/views/concluded/concluded.html.erb
@@ -8,7 +8,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Encomendas Canceladas</h1>
+<h1>Encomendas Concluidas</h1>
 
 <%if current_user.role == 'normal_user'%>
     <table>
