Encomendas aceitas implementado (Cliente/Admin)

--- a/JoiaDaEuropa/app/views/canceled/canceled.html.erb
+++ b/JoiaDaEuropa/app/views/canceled/canceled.html.erb
@@ -4,6 +4,7 @@
 |
 <%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
 <%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
+<%= link_to 'Encomendas Aceitas', '/accepted' %> |
 <%= link_to 'Encomendas Concluidas', 'concluded#concluded' %>
 
 <p id="notice"><%= notice %></p>
