--- a/JoiaDaEuropa/app/views/orders/new.html.erb
+++ b/JoiaDaEuropa/app/views/orders/new.html.erb
@@ -1,6 +1,7 @@
 <%= link_to 'Nova Encomenda', 'orders/new' %> |
 <%= link_to 'Encomendas Pendentes', '/pending' %> |
 <%= link_to 'Encomendas Canceladas', '/canceled' %> |
+<%= link_to 'Encomendas Aceitas', '/accepted' %> |
 <%= link_to 'Encomendas Concluidas', '/concluded' %>
 
 <h1>Nova Encomenda</h1>
