--- a/JoiaDaEuropa/app/views/accepted/accepted.html.erb
+++ b/JoiaDaEuropa/app/views/accepted/accepted.html.erb
@@ -9,7 +9,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Encomendas Concluidas</h1>
+<h1>Encomendas Aceitas</h1>
 
 <%if current_user.role == 'normal_user'%>
     <table>
