--- a/JoiaDaEuropa/app/views/pending/pending.html.erb
+++ b/JoiaDaEuropa/app/views/pending/pending.html.erb
@@ -45,7 +45,7 @@
         <th>Descricao</th>
         <th>Status</th>
         <th>User</th>
-        <th colspan="3"></th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -57,6 +57,7 @@
             <td><%= order.description %></td>
             <td><%= order.status %></td>
             <td><%= order.user.email %></td>
+              <td><%= link_to 'Concluir', conclude_order_path(order.id), {method: 'post'} %></td>
           </tr>
       <% end %>
       </tbody>
