Botoes para alterar status das encomendas implementados

--- a/JoiaDaEuropa/app/views/accepted/accepted.html.erb
+++ b/JoiaDaEuropa/app/views/accepted/accepted.html.erb
@@ -2,6 +2,7 @@
     <%= link_to 'Nova Encomenda', 'orders/new' %>
 <%end%>
 |
+<%= link_to 'Todas Encomendas', '/orders' %> |
 <%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
 <%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
 <%= link_to 'Encomendas Aceitas', '/accepted' %> |
@@ -57,6 +58,7 @@
             <td><%= order.description %></td>
             <td><%= order.status %></td>
             <td><%= order.user.email %></td>
+            <td><%= link_to 'Concluir', conclude_order_path(order.id), {method: 'post'} %></td>
           </tr>
       <% end %>
       </tbody>
