--- a/JoiaDaEuropa/app/views/orders/new.html.erb
+++ b/JoiaDaEuropa/app/views/orders/new.html.erb
@@ -1,4 +1,5 @@
 <%= link_to 'Nova Encomenda', 'orders/new' %> |
+<%= link_to 'Todas Encomendas', '/orders' %> |
 <%= link_to 'Encomendas Pendentes', '/pending' %> |
 <%= link_to 'Encomendas Canceladas', '/canceled' %> |
 <%= link_to 'Encomendas Aceitas', '/accepted' %> |
