--- a/JoiaDaEuropa/app/views/concluded/concluded.html.erb
+++ b/JoiaDaEuropa/app/views/concluded/concluded.html.erb
@@ -2,6 +2,7 @@
     <%= link_to 'Nova Encomenda', 'orders/new' %>
 <%end%>
 |
+<%= link_to 'Todas Encomendas', '/orders' %> |
 <%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
 <%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
 <%= link_to 'Encomendas Aceitas', '/accepted' %> |
