--- a/JoiaDaEuropa/app/views/orders/index.html.erb
+++ b/JoiaDaEuropa/app/views/orders/index.html.erb
@@ -1,74 +1,64 @@
+<%if current_user.role == 'normal_user'%>
+    <%= link_to 'Nova Encomenda', 'orders/new' %>
+<%end%>
+|
+<%= link_to 'Todas Encomendas', '/orders' %> |
+<%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
+<%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
+<%= link_to 'Encomendas Aceitas', '/accepted' %> |
+<%= link_to 'Encomendas Concluidas', 'concluded#concluded' %>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Orders</h1>
+<h1>Todas Encomendas</h1>
+
+
+<%= form_tag orders_path, :method => 'get' do %>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search" %>
+<% end %>
+
+<%= link_to "Advanced Search", new_search_path  %>
+
+<br><br>
 
 <% if policy(@orders).index? %>
-    <p>Usuario Admin</p>
-
-    <%= form_tag orders_path, :method => 'get' do %>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag "Search" %>
-    <% end %>
-
-
-    <%= link_to "Advanced Search", new_search_path  %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Price</th>
-      <th>Deadline</th>
-      <th>Description</th>
-      <th>Status</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.price %></td>
-        <td><%= order.deadline %></td>
-        <td><%= order.description %></td>
-        <td><%= order.status %></td>
-        <td><%= order.user.email %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Order', new_order_path %>
-
-<% else %>
-
-    <p>Usuario comum</p>
-
-    <%= form_tag orders_path, :method => 'get' do %>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag "Search" %>
-    <% end %>
-
-
-    <%= link_to "Advanced Search", new_search_path  %>
-
     <table>
       <thead>
-      <tr>
-        <th>Price</th>
-        <th>Deadline</th>
-        <th>Description</th>
-        <th>Status</th>
-        <th>User</th>
-        <th colspan="3"></th>
-      </tr>
+        <tr>
+          <th>Price</th>
+          <th>Deadline</th>
+          <th>Description</th>
+          <th>Status</th>
+          <th>User</th>
+          <th colspan="3"></th>
+        </tr>
       </thead>
 
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.price %></td>
+            <td><%= order.deadline %></td>
+            <td><%= order.description %></td>
+            <td><%= order.status %></td>
+            <td><%= order.user.email %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+<% else %>
+    <table>
+      <thead>
+        <tr>
+          <th>Price</th>
+          <th>Deadline</th>
+          <th>Description</th>
+          <th>Status</th>
+          <th>User</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
       <tbody>
       <% @orders.each do |order| %>
           <tr>
@@ -77,12 +67,9 @@
             <td><%= order.description %></td>
             <td><%= order.status %></td>
             <td><%= order.user.email %></td>
-
           </tr>
       <% end %>
       </tbody>
     </table>
-
     <br>
-
 <% end %>
