--- a/JoiaDaEuropa/app/views/canceled/canceled.html.erb
+++ b/JoiaDaEuropa/app/views/canceled/canceled.html.erb
@@ -1,3 +1,43 @@
+<header id="pa_header">
+  <!-- BEGIN MENU -->
+  <div class="menu_area_private">
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <!-- LOGO -->
+          <br>
+          <a class="navbar-brand" href="http://0.0.0.0:3000/">Joia da <span>Europa</span></a>
+
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <br>
+          <div class="menu_login">
+            <a href="#">PT</a> |
+            <a href="#">EN</a>
+          </div>
+
+          <ul id="top-menu" class="nav navbar-nav navbar-right main_nav">
+            <li><a href="http://0.0.0.0:3000/">Home</a></li>
+            <li><a onClick="linkTo('http://0.0.0.0:3000/orders')" href="">Sua Conta</a></li>
+            <li><%= link_to 'Sign Out', destroy_user_session_path, { method: 'delete' }%></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+  </div>
+  <!-- END MENU -->
+</header>
+
+<div class="pa_container">
+
 <%if current_user.role == 'normal_user'%>
     <%= link_to 'Nova Encomenda', 'orders/new' %>
 <%end%>
@@ -12,8 +52,14 @@
 
 <h1>Encomendas Canceladas</h1>
 
-<%if current_user.role == 'normal_user'%>
-    <table>
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Resultados</div>
+
+    <%if current_user.role == 'normal_user'%>
+    <!-- Table -->
+
+    <table class="table">
       <thead>
       <tr>
         <th>Codigo</th>
@@ -37,7 +83,7 @@
       </tbody>
     </table>
 <%else%>
-    <table>
+    <table class="table">
       <thead>
       <tr>
         <th>Codigo</th>
@@ -63,4 +109,22 @@
       </tbody>
     </table>
 <%end%>
+  </div>
 <br>
+</div>
+
+
+<footer id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="footer_left">
+          <!--=========== Designed By WpFreeware Team ================-->
+          <p>Jóia da Europa Unipessoal, Lda. &copy; All Rights Reserved.</p>
+          <!--=========== Designed By WpFreeware Team ================-->
+        </div>
+      </div>
+
+    </div>
+  </div>
+</footer>
