--- a/JoiaDaEuropa/app/views/concluded/concluded.html.erb
+++ b/JoiaDaEuropa/app/views/concluded/concluded.html.erb
@@ -1,69 +1,130 @@
-<%if current_user.role == 'normal_user'%>
-    <%= link_to 'Nova Encomenda', 'orders/new' %>
-<%end%>
-|
-<%= link_to 'Todas Encomendas', '/orders' %> |
-<%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
-<%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
-<%= link_to 'Encomendas Aceitas', '/accepted' %> |
-<%= link_to 'Encomendas Concluidas', 'concluded#concluded' %>
 
-<p id="notice"><%= notice %></p>
+  <header id="pa_header">
+    <!-- BEGIN MENU -->
+    <div class="menu_area_private">
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 
-<h1>Encomendas Concluidas</h1>
+            <!-- LOGO -->
+            <br>
+            <a class="navbar-brand" href="http://0.0.0.0:3000/">Joia da <span>Europa</span></a>
 
-<%if current_user.role == 'normal_user'%>
-    <table>
-      <thead>
-      <tr>
-        <th>Codigo</th>
-        <th>Preco</th>
-        <th>Data de Entrega</th>
-        <th>Descricao</th>
-        <th>Status</th>
-        <th colspan="3"></th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @orders.each do |order| %>
-          <tr>
-            <td><%= order.id%></td>
-            <td><%= order.price %></td>
-            <td><%= order.deadline %></td>
-            <td><%= order.description %></td>
-            <td><%= order.status %></td>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
-<%else%>
-    <table>
-      <thead>
-      <tr>
-        <th>Codigo</th>
-        <th>Preco</th>
-        <th>Data de Entrega</th>
-        <th>Descricao</th>
-        <th>Status</th>
-        <th>User</th>
-        <th colspan="3"></th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @orders.each do |order| %>
-          <tr>
-            <td><%= order.id%></td>
-            <td><%= order.price %></td>
-            <td><%= order.deadline %></td>
-            <td><%= order.description %></td>
-            <td><%= order.status %></td>
-            <td><%= order.user.email %></td>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
-<%end%>
-<br>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <br>
+            <div class="menu_login">
+              <a href="#">PT</a> |
+              <a href="#">EN</a>
+            </div>
 
+            <ul id="top-menu" class="nav navbar-nav navbar-right main_nav">
+              <li><a href="http://0.0.0.0:3000/">Home</a></li>
+              <li><a onClick="linkTo('http://0.0.0.0:3000/orders')" href="">Sua Conta</a></li>
+              <li><%= link_to 'Sign Out', destroy_user_session_path, { method: 'delete' }%></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
+    </div>
+    <!-- END MENU -->
+  </header>
 
+  <div class="pa_container">
 
+    <%if current_user.role == 'normal_user'%>
+        <%= link_to 'Nova Encomenda', 'orders/new' %>
+    <%end%>
+    |
+    <%= link_to 'Todas Encomendas', '/orders' %> |
+    <%= link_to 'Encomendas Pendentes', 'pending#pending' %> |
+    <%= link_to 'Encomendas Canceladas', 'canceled#canceled' %> |
+    <%= link_to 'Encomendas Aceitas', '/accepted' %> |
+    <%= link_to 'Encomendas Concluidas', 'concluded#concluded' %>
+
+    <p id="notice"><%= notice %></p>
+
+    <h1>Encomendas Concluidas</h1>
+    <div class="panel panel-primary">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Resultados</div>
+
+      <!-- Table -->
+
+      <%if current_user.role == 'normal_user'%>
+          <table class="table">
+            <thead>
+            <tr>
+              <th>Codigo</th>
+              <th>Preco</th>
+              <th>Data de Entrega</th>
+              <th>Descricao</th>
+              <th>Status</th>
+              <th colspan="3"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @orders.each do |order| %>
+                <tr>
+                  <td><%= order.id%></td>
+                  <td><%= order.price %></td>
+                  <td><%= order.deadline %></td>
+                  <td><%= order.description %></td>
+                  <td><%= order.status %></td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+      <%else%>
+          <table class="table">
+            <thead>
+            <tr>
+              <th>Codigo</th>
+              <th>Preco</th>
+              <th>Data de Entrega</th>
+              <th>Descricao</th>
+              <th>Status</th>
+              <th>User</th>
+              <th colspan="3"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @orders.each do |order| %>
+                <tr>
+                  <td><%= order.id%></td>
+                  <td><%= order.price %></td>
+                  <td><%= order.deadline %></td>
+                  <td><%= order.description %></td>
+                  <td><%= order.status %></td>
+                  <td><%= order.user.email %></td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+      <%end%>
+    </div>
+    <br>
+
+  </div>
+
+  <footer id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="footer_left">
+          <!--=========== Designed By WpFreeware Team ================-->
+          <p>Jóia da Europa Unipessoal, Lda. &copy; All Rights Reserved.</p>
+          <!--=========== Designed By WpFreeware Team ================-->
+        </div>
+      </div>
+
+    </div>
+  </div>
+  </footer>
