--- a/JoiaDaEuropa/app/views/orders/_form.html.erb
+++ b/JoiaDaEuropa/app/views/orders/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @order, :html => { multipart: true } do |f| %>
   <% if order.errors.any? %>
-    <div id="error_explanation">
+        <div id="error_explanation" xmlns="http://www.w3.org/1999/html">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
       <ul>
@@ -10,36 +10,37 @@
       </ul>
     </div>
   <% end %>
-    
-    <div class="field">
-      <label>Anexo: </label>
+
+    <div class="form-group">
+      <label for="exampleInputFile">Anexo:</label>
       <%= f.file_field :attachment %>
     </div>
 
+    <div class="form-group">
+      <label>Preco Unitario (Em Euros):</label>
+      <div class="input-group">
+        <div class="input-group-addon">€</div>
+        <%= f.text_field :price, placeholder: "Valor", class:"form-control" %>
+      </div>
+    </div>
 
-    <div class="field">
-      <label>Preco: </label>
-    <%= f.text_field :price %>
-  </div>
 
-  <div class="field">
-    <label>Data de Entrega: </label>
+  <div class="form-group">
+    <label>Data de Entrega: </label><br>
     <%= f.date_select :deadline %>
   </div>
 
-  <div class="field">
-    <label>Descricao: </label>
-    <%= f.text_area :description %>
+  <div class="form-group">
+    <label>Descricao: </label><br>
+    <%= f.text_area :description, size:"40" %>
   </div>
 
-  <div class="field">
-    <%= f.hidden_field :user_id%>
+  <div class="form-group">
+    <%= f.hidden_field :user_id %>
   </div>
 
 
-
-
-  <div class="actions">
+  <div class="botao_form">
     <%= f.submit %>
   </div>
 <% end %>
