--- a/JoiaDaEuropa/app/views/orders/index.html.erb
+++ b/JoiaDaEuropa/app/views/orders/index.html.erb
@@ -1,3 +1,41 @@
+<header id="pa_header">
+  <!-- BEGIN MENU -->
+  <div class="menu_area_private">
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <!-- LOGO -->
+          <br>
+          <a class="navbar-brand" href="http://0.0.0.0:3000/">Joia da <span>Europa</span></a>
+
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <br>
+          <div class="menu_login">
+            <a href="#">PT</a> |
+            <a href="#">EN</a>
+          </div>
+
+          <ul id="top-menu" class="nav navbar-nav navbar-right main_nav">
+            <li><a href="http://0.0.0.0:3000/">Home</a></li>
+            <li><a onClick="linkTo('http://0.0.0.0:3000/orders')" href="">Sua Conta</a></li>
+            <li><%= link_to 'Sign Out', destroy_user_session_path, { method: 'delete' }%></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+  </div>
+  <!-- END MENU -->
+</header>
+<div class="pa_container">
 <%if current_user.role == 'normal_user'%>
     <%= link_to 'Nova Encomenda', 'orders/new' %>
 <%end%>
@@ -23,33 +61,13 @@
 <br><br>
 
 <% if policy(@orders).index? %>
-    <table>
-      <thead>
-        <tr>
-          <th>Price</th>
-          <th>Deadline</th>
-          <th>Description</th>
-          <th>Status</th>
-          <th>User</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
+    <div class="panel panel-primary">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Resultados</div>
 
-      <tbody>
-        <% @orders.each do |order| %>
-          <tr>
-            <td><%= order.price %></td>
-            <td><%= order.deadline %></td>
-            <td><%= order.description %></td>
-            <td><%= order.status %></td>
-            <td><%= order.user.email %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-<% else %>
-    <table>
-      <thead>
+      <!-- Table -->
+      <table class="table">
+        <thead>
         <tr>
           <th>Price</th>
           <th>Deadline</th>
@@ -58,18 +76,67 @@
           <th>User</th>
           <th colspan="3"></th>
         </tr>
-      </thead>
-      <tbody>
-      <% @orders.each do |order| %>
-          <tr>
-            <td><%= order.price %></td>
-            <td><%= order.deadline %></td>
-            <td><%= order.description %></td>
-            <td><%= order.status %></td>
-            <td><%= order.user.email %></td>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
+        </thead>
+
+        <tbody>
+        <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.price %></td>
+              <td><%= order.deadline %></td>
+              <td><%= order.description %></td>
+              <td><%= order.status %></td>
+              <td><%= order.user.email %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+<% else %>
+    <div class="panel panel-primary">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Resultados</div>
+
+      <!-- Table -->
+      <table class="table">
+        <thead>
+        <tr>
+          <th>Price</th>
+          <th>Deadline</th>
+          <th>Description</th>
+          <th>Status</th>
+          <th>User</th>
+          <th colspan="3"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.price %></td>
+              <td><%= order.deadline %></td>
+              <td><%= order.description %></td>
+              <td><%= order.status %></td>
+              <td><%= order.user.email %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
     <br>
 <% end %>
+</div>
+
+
+<footer id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="footer_left">
+          <!--=========== Designed By WpFreeware Team ================-->
+          <p>Jóia da Europa Unipessoal, Lda. &copy; All Rights Reserved.</p>
+          <!--=========== Designed By WpFreeware Team ================-->
+        </div>
+      </div>
+
+    </div>
+  </div>
+</footer>
